added Controller-level integration tests